--- a/config
+++ b/config
@@ -1,6 +1,6 @@
 ngx_addon_name=ngx_http_qrcode_module
 HTTP_MODULES="$HTTP_MODULES $ngx_addon_name"
-NGX_ADDON_SRCS="$NGX_ADDON_SRCS $ngx_addon_dir/ngx_http_qrcode_module.c"
-NGX_ADDON_DEPS="$NGX_ADDON_DEPS"
+NGX_ADDON_SRCS="$NGX_ADDON_SRCS $ngx_addon_dir/ngx_http_qrcode_module.c $ngx_addon_dir/ngx_http_qrcode_utils.c"
+NGX_ADDON_DEPS="$NGX_ADDON_DEPS $ngx_addon_dir/ngx_http_qrcode_module.h $ngx_addon_dir/ngx_http_qrcode_utils.h"
 CFLAGS="$CFLAGS"
 CORE_LIBS="$CORE_LIBS -lgd -lqrencode"
