添加qrcode_urlencode_txt命令，支持对urlencode的字符串进行解码

--- a/conf/nginx_var.conf
+++ b/conf/nginx_var.conf
@@ -22,6 +22,7 @@ http {
 			qrcode_version $arg_ver;
 			qrcode_casesensitive $arg_case;
 			qrcode_txt $arg_txt;
+			#qrcode_urlencode_txt $arg_txt;
 
 			qrcode_gen;
 		}
